<resources>
    <string name="app_name">Tel-U Nyarios</string>

    <!-- Text -->
    <string name="text_welcome">WELCOME TO\nTELKOM UNIVERSITY</string>
    <string name="text_home">HOME</string>
    <string name="text_report">LAPORAN</string>
    <string name="text_login">LOGIN</string>
    <string name="text_signup">SIGN UP</string>
    <string name="text_register">Register</string>
    <string name="text_igracias">Sign in with Igracias</string>
    <string name="text_to_register">I\'m not registered!</string>
    <string name="text_to_login">I have an account!</string>
    <string name="text_nama_pelapor">Nama Pelapor</string>
    <string name="text_status">Status Pelapor</string>
    <string name="text_submit">Submit</string>

    <!-- Hint -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_fullname">Nama Lengkap</string>
    <string name="hint_confirm_pass">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_report_date">Tanggal Melapor</string>
    <string name="hint_problem">Masalah</string>
    <string name="hint_location">Lokasi</string>
    <string name="hint_evidence">Bukti Keluhan</string>
    <string name="hint_description">Deskripsi</string>
    <string name="text_success">Laporan berhasil terkirim!</string>
    <string name="title_activity_history">HistoryActivity</string>

    <!-- Tab Menu -->
    <string name="tab_process">In Process</string>
    <string name="tab_fixed">Fixed</string>
    <string name="tab_broken">Broken</string>
    <string name="textNoHistory">Tidak ada riwayat laporan</string>
    <string name="history">History</string>
    <string name="text_logout">Logout</string>
</resources>